Added Btn to show Profile Cards

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
   </head>
   <body>
     <main>
+      <button type="button" class="btn btn-primary btn-lg btn-block" id="buttonProfileCards">show Profile Cards</button>
+
         <div class="container" id="cardContainer"></div>
-      </div>
+      
     </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
